--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ name = "redis-starter-rust"
 version = "0.1.0"
 authors = ["Codecrafters <hello@codecrafters.io>"]
 edition = "2021"
+rust-version = "1.70.0"
 
 # DON'T EDIT THIS!
 #
